# misc_code

./: .gitignore  README.md
3DMax-Cliques/Linux/: main.cpp
LIO-SAM/: .gitignore  CMakeLists.txt
LIO-SAM/include/lio_sam/: utility.hpp
LIO-SAM/msg/: CloudInfo.msg
LIO-SAM/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
Max-Clique/: CMakeLists.txt  extractFeature.cpp  extractMaxClique.cpp  main.cpp
Max-Clique/.cache/clangd/index/: extractFeature.cpp.A99FB1D55A2971AA.idx  extractFeature.hpp.9F56CCF8735241FD.idx  main.cpp.713C8D6C050C10D5.idx
Max-Clique/include/: extractClique.hpp  extractFeature.hpp
Point-GNN.pytorch-master/: mytrain.py  train.sh
Point-GNN.pytorch-master/models/: graph_gen.py
Point-LIO/: CMakeLists.txt
Point-LIO/include/: so3_math.h
Point-LIO/src/: Estimator.cpp  Estimator.h  IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp
cartographer_ros/: CMakeLists.txt
cartographer_ros/include/cartographer_ros/: node.h
cartographer_ros/src/: node.cpp  node_main.cpp
cmake_test/: CMakeLists.txt  Makefile  test.ioc
cmake_test/Core/Src/: main.c
config/: avia.yaml
example_cmake/: CMakeLists.txt  corr.cpp  example.cpp  houghlines.cpp
examples/: plotTrajectory.cpp
open3d_test/: CMakeLists.txt  Draw.cpp
python_test/: test.py
slam_example/plotTrajectory/: CMakeLists.txt  plotTrajectory.cpp
slam_example/useEigen/: CMakeLists.txt  eigenMatrix.cpp
slam_example/useGeometry/: CMakeLists.txt  useGeometry.cpp
slam_example/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
slam_in_autonomous_driving-master/: .gitignore
slam_in_autonomous_driving-master/log/: latest_list
slam_in_autonomous_driving-master/src/ch4/: imu_preintegration.cc
src/: Estimator.cpp  IMU_Processing.cpp  laserMapping.cpp  li_initialization.cpp  parameters.cpp  parameters.h
torch_cpp/: CMakeLists.txt  torch.cpp
torch_cpp/tools/: convert.py
